# LSEG-cpp-bootcamp

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  STRATEGY.md  compile.txt  execution_rep.csv  execution_rep_1.csv  execution_rep_6.csv  execution_rep_7.csv  project_plan.md  rejected_execution_rep.csv  rejected_execution_rep_1.csv  rejected_execution_rep_7.csv
Week-02-Basics-and-Performance/codes/: functionsParameterPassing.cpp  main.s  selectionControlFlows.cpp
gui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
gui/src/: App.tsx  index.css  main.tsx
gui/src/components/: Header.tsx  (+5 more)
scripts/: generate_sample_8.py  verify_expected_reports.py
server/: execution_rep.csv  main.py  orders.csv  pyproject.toml  rejected_execution_rep.csv
src/: CSVReader.cpp  CSVReader.h  CSVWriter.cpp  CSVWriter.h  ExecutionReport.h  MatchingEngine.cpp  MatchingEngine.h  Order.h  OrderBook.cpp  OrderBook.h  OrderIDGenerator.cpp  OrderIDGenerator.h  Validator.cpp  Validator.h  main.cpp
tests/: expected_exec_rep_1.csv  expected_exec_rep_2.csv  expected_exec_rep_3.csv  expected_exec_rep_4.csv  expected_exec_rep_5.csv  expected_exec_rep_6.csv  expected_exec_rep_7.csv  expected_exec_rep_8.csv  expected_rejected_exec_rep_2.csv  expected_rejected_exec_rep_3.csv  expected_rejected_exec_rep_4.csv  expected_rejected_exec_rep_5.csv  expected_rejected_exec_rep_7.csv  expected_rejected_exec_rep_8.csv  sample_orders_1.csv  sample_orders_2.csv  sample_orders_3.csv  sample_orders_4.csv  sample_orders_5.csv  sample_orders_7.csv  sample_orders_8.csv
(+20 files in other folders)
